# github-copilot-example

./: .env.sample  README.md  pyproject.toml
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/agents/: arquitecto-pydantic.agent.md
.github/prompts/: plan-toolUsagesLoggingHook.prompt.md
.github/skills/pydantic-validator/: SKILL.md
assets/images/: 02-ask_plan_agent_loop.md
docs/: 00-index.md  01-setup.md  02-basicos.md  02-basics.md  03-customization.md  03-personalizacion.md  04-instrucciones-proyecto.md  04-project-instructions.md  05-advanced.md  05-avanzado.md  06-mcp.md  07-recursos.md  07-resources.md
src/: data_processor.py  test_logic.py
src/mcp_server/: auth.py  dummy_tools.py  server.py
src/mcp_server/services/: __init__.py  fetch_tools.py  proxy_loader.py
